# QDbusDemo

./: CMakeLists.txt  README.md
src/cli/: CMakeLists.txt  main.cpp
src/module/AppMeta/: AppInfo.h
src/module/ipcxml/: com.demo.qdbus.appmanager.xml
src/module/utils/: RegisterDbusType.h
src/service/: CMakeLists.txt  main.cpp
src/service/impl/: AppManager.cpp  AppManager.h  AppManagerPrivate.cpp  AppManagerPrivate.h
src/service/resource/: AppInfoDB.json  AppStream.json  resource.qrc
